component updated to use a fixed width and a collapse functionality

--- a/src/app/admin/admin-sidebar/admin-sidebar.component.scss
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.scss
@@ -1,8 +1,29 @@
-.active {
-    background-color: #D1FADF;
+.sidebar {
+    box-shadow: 0 0 1px gray;
+    transition: all 0.5s ease-in-out;
 }
 
-.active h5 {
-    color: #027A48;
-    font-weight: 500;
+.sidebar.collapsed {
+    width: 60px;
+    padding: 1rem 10px;
+
+    h5 {
+        display: none;
+    }
+
+    .cursor-pointer {
+        justify-content: center;
+    }
+}
+
+.active {
+    background-color: #D1FADF;
+    border-right: 5px solid #027A48;
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+
+    h5 {
+        color: #027A48;
+        font-weight: 500;
+    }
 }
